[package]
name = "tcalc"
description = "A featureful calculator for when you want to do math in a terminal."
version = "1.6.14"
authors = ["dubrowgn"]
license = "MIT"
repository = "https://github.com/dubrowgn/tcalc.git"
documentation = "https://github.com/dubrowgn/tcalc"
edition = "2018"

include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/*.rs",
]

[dependencies]
dirs = "2.0.1"
tcalc-rustyline = "1.0.2"
#tcalc-rustyline = { path = "../rustyline" }

[features]
trace = []
