[package]
authors = ["dubrowgn"]
description = "A featureful calculator for when you want to do math in a terminal."
documentation = "https://github.com/dubrowgn/tcalc"
edition = "2021"
license = "MIT"
name = "tcalc"
readme="README.md"
repository = "https://github.com/dubrowgn/tcalc.git"
version = "1.8.0"

include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/*.rs",
]

[profile.release]
lto = "fat"

[dependencies]
dirs = "4.0.x"
tcalc-rustyline = "1.0.2"
#tcalc-rustyline = { path = "../rustyline" }

[features]
trace = []
